force-app/main/default/objects/Software_Code_Disclosure__c/Software_Code_Disclosure__c.object-meta.xml
<CustomObject>
    <label>Software Code Disclosure</label>
    <nameField>
        <label>Software Code Disclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Software Code Disclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>