force-app/main/default/objects/Software_Code_Disclosure__c/fields/Algorithm_or_Patentable_Invention__c.field-meta.xml
<CustomField>
    <fullName>Algorithm_or_Patentable_Invention__c</fullName>
    <description>Do you believe there is an algorithm or other patentable invention embodied in this Software?</description>
    <label>Algorithm or Patentable Invention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>