force-app/main/default/objects/Software_Code_Disclosure__c/fields/Derivative__c.field-meta.xml
<CustomField>
    <fullName>Derivative__c</fullName>
    <description>Is the software a derivative or improvement of preexisting software?</description>
    <label>Derivative or Improvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, internally developed and MIT-owned</fullName>
            </value>
            <value>
                <fullName>Yes, but it&apos;s open source</fullName>
            </value>
            <value>
                <fullName>Yes, but it&apos;s from a third-party and it is not open source</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>