force-app/main/default/objects/Software_Code_Disclosure__c/fields/Encompass_AI_Or_Machine_Learning__c.field-meta.xml
<CustomField>
    <fullName>Encompass_AI_Or_Machine_Learning__c</fullName>
    <description>Software encompass AI or Machine Learning</description>
    <label>AI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>