force-app/main/default/objects/Software_Code_Disclosure__c/fields/Existing_Disclosure_Comment__c.field-meta.xml
<CustomField>
    <fullName>Existing_Disclosure_Comment__c</fullName>
    <label>Existing Disclosure Comment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>