force-app/main/default/objects/Software_Code_Disclosure__c/fields/Is_Open_Source__c.field-meta.xml
<CustomField>
    <fullName>Is_Open_Source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Open Source</label>
    <type>Checkbox</type>
</CustomField>