force-app/main/default/objects/Software_Code_Disclosure__c/fields/Is_Open_Source_YN__c.field-meta.xml
<CustomField>
    <fullName>Is_Open_Source_YN__c</fullName>
    <label>Is Open Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_U</valueSetName>
    </valueSet>
</CustomField>