force-app/main/default/objects/Software_Code_Disclosure__c/fields/Open_Source_Comment__c.field-meta.xml
<CustomField>
    <fullName>Open_Source_Comment__c</fullName>
    <label>Open Source Comment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>