force-app/main/default/objects/Software_Code_Disclosure__c/fields/Part_Of_Employment__c.field-meta.xml
<CustomField>
    <fullName>Part_Of_Employment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Part Of Employment</label>
    <type>Checkbox</type>
</CustomField>