force-app/main/default/objects/Software_Code_Disclosure__c/fields/Software_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Software_Categorization__c</fullName>
    <inlineHelpText>Consider common industry phrases and terms that best describe the software and/or the problem that is being solved.</inlineHelpText>
    <label>Software Categorization</label>
    <type>TextArea</type>
</CustomField>