force-app/main/default/objects/Software_Code_Disclosure__c/fields/Source_of_Training_Data__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Training_Data__c</fullName>
    <label>Source of Training Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Our own</fullName>
            </value>
            <value>
                <fullName>Public source</fullName>
            </value>
            <value>
                <fullName>Third-party – Licensed</fullName>
            </value>
            <value>
                <fullName>Sponsor/collaborator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>