force-app/main/default/objects/Software_Code_Disclosure__c/fields/Source_of_Training_Details__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Training_Details__c</fullName>
    <label>Source of Training Details</label>
    <type>TextArea</type>
</CustomField>