force-app/main/default/objects/Software_Code_Disclosure__c/fields/Use_Any_Third_Party_Code__c.field-meta.xml
<CustomField>
    <fullName>Use_Any_Third_Party_Code__c</fullName>
    <label>Use Any Third Party Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>